# job-scraper

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  web.py
.claude/: launch.json
docker/: entrypoint.sh  healthcheck.sh  scheduler.sh
docs/: ENDPOINT_AUDIT.md
scripts/: audit_endpoints.py
src/: __init__.py  export.py  filters.py  language.py  models.py  parser.py  people.py  scraper.py  storage.py
templates/: index.html
tests/: test_export.py  test_filters.py  test_language.py  test_models.py  test_parser.py  test_people.py  test_scraper.py  test_storage.py  test_web.py
