[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-job-parser"
version = "0.1.0"
description = "Scrape and parse public LinkedIn job listings into structured, filterable data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "linkedin-job-parser team" }]

dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "typer>=0.15",
    "rich>=13.0",
    "structlog>=24.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "ruff>=0.8",
]

[project.scripts]
linkedin-job-parser = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- ruff ---------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
# scripts/ holds throwaway investigation tooling (endpoint audit), not package code.
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = [
    "E", "W", "F",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "ASYNC",         # async correctness
    "RUF",           # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
# Typer's documented idiom puts `typer.Option(...)` / `typer.Argument(...)`
# in parameter defaults; B008 fights that pattern.
"main.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

# --- mypy ---------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["scripts/"]

# --- pytest -------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
